# DeviceFP

./: fakeData  settings.gradle  sysProp.py  sysProp.txt  sysProp_done.txt
app/: build.gradle
app/src/androidTest/java/com/ashenone/dfp/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  dfp.cpp  dfp.h  hashmap.h
app/src/main/cpp/netlink/: bionic_netlink.cpp  bionic_netlink.h  ifaddrs.h
app/src/main/cpp/utils/: allInclude.h
app/src/main/java/com/ashenone/dfp/: Common.java  DeviceInfo.java  MainActivity.java
app/src/main/java/com/ashenone/dfp/collector/: ActivityManagerCollector.java  BatteryInfoCollector.java  BlueToothInfoCollector.java  CanvasCollector.java  DeviceInfoCollector.java  DisplayInfoCollector.java  EmulatorChecker.java  GpuInfoCollector.java  HardwareInfoCollector.java  JavaSystemInfoCollector.java  NativeCollector.java  NetworkInfoCollector.java  PackageCollector.java  PropCollector.java  SensorInfoCollector.java  SettingsCollector.java  SimInfoCollector.java  TelephonyManagerCollector.java  VirtualAppCheck.java  WifiManagerCollector.java
app/src/main/java/com/ashenone/dfp/permission/: PermissionManager.java
app/src/main/java/com/ashenone/dfp/util/: ReadUtil.java  ReflactUtil.java  TaskExecutor.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/menu/: main.xml
app/src/main/res/values/: themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/ashenone/dfp/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
